--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 <div class="container">
   <form method="POST" action="/">
     <div class="row mt-3">
@@ -27,6 +28,4 @@
     </div>
   </form>
 </div>
-
-
 {% endblock %}
