--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <title>Welcome to Pitch</title>
   <!-- Base Styles -->
   <style>
@@ -19,6 +19,9 @@
 
     * {
       font-family: 'Montserrat', sans-serif;
+    }
+    .rounded{
+      border-radius: 50%;
     }
   </style>
 </head>
