--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,6 +1,16 @@
-{% macro displayPitchList(pitch_list) %}
-{% for pitch in pitch_list %}
-  <li>{{pitch.title}}</li>
-{% endfor %}
-
-{% endmacro %}
+{% macro displayPitchList(pitch_list) %} {% for pitch in pitch_list %}
+<div id="netWorking" class="col-xs-6 col-sm-6 col-md-6">
+  <div class="card">
+    <div class="card-header">
+      Category - {{pitch.category}}
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">{{pitch.title}}</h5>
+      <p class="card-text">{{pitch.body}}</p>
+      <p class="card-text"><small class="text-muted">{{pitch.author}}</small></p>
+      <span class="rounded"><a href="#" class="btn btn-primary btn-lg"><i class="far fa-hand-point-up mr-2"></i>{{pitch.upvotes}}</a></span>
+      <a href="#" class="btn btn-primary btn-lg"><i class="far fa-hand-point-down mr-2"></i>{{pitch.downvotes}}</a>
+    </div>
+  </div>
+</div>
+{% endfor %} {% endmacro %}
