--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,4 +1,6 @@
-{% macro displayPitchList(pitch_list) %} {% for pitch in pitch_list %}
+{% macro displayPitchList(pitch_list) %}
+
+{% for pitch in pitch_list %}
 <div id="netWorking" class="col-xs-6 col-sm-6 col-md-6">
   <div class="card">
     <div class="card-header">
@@ -8,8 +10,8 @@
       <h5 class="card-title">{{pitch.title}}</h5>
       <p class="card-text">{{pitch.body}}</p>
       <p class="card-text"><small class="text-muted">{{pitch.author}}</small></p>
-      <span class="rounded"><a href="#" class="btn btn-primary btn-lg"><i class="far fa-hand-point-up mr-2"></i>{{pitch.upvotes}}</a></span>
-      <a href="#" class="btn btn-primary btn-lg"><i class="far fa-hand-point-down mr-2"></i>{{pitch.downvotes}}</a>
+      <a href="#" id="pitch{{pitch.id}}" class="btn btn-primary btn-lg" btn_id="{{(pitch.id)}}"><i class="far fa-hand-point-up mr-2"></i>{{pitch.upvotes}}</a>
+      <a href="#" id="pitch{{pitch.id}}" class="btn btn-primary btn-lg"btn_id="{{(pitch.id)}}"><i class="far fa-hand-point-down mr-2"></i>{{pitch.downvotes}}</a>
     </div>
   </div>
 </div>
