Can go to a category

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,7 @@
 {% macro displayPitchList(pitch_list) %}
 
 {% for pitch in pitch_list %}
-<div id="netWorking" class="col-xs-6 col-sm-6 col-md-6">
+<div class="col-xs-6 col-sm-6 col-md-6">
   <div class="card">
     <div class="card-header">
       Category - {{pitch.category}}
