Successfully inserted pitches into database

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -18,10 +18,9 @@
           Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/category/{{pitch.category}}">Business Networking</a>
-          <a class="dropdown-item" href="#jobs">Job Seeker</a>
+          <a class="dropdown-item" href="/business/Business">Business Networking</a>
+          <a class="dropdown-item" href="/jobs/Jobs">Job Seeker</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Mans Not Hot</a>
         </div>
       </li>
     </ul>
