--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -18,8 +18,8 @@
           Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/business/Business">Business Networking</a>
-          <a class="dropdown-item" href="/jobs/Jobs">Job Seeker</a>
+          <a class="dropdown-item" href="/business">Business Networking</a>
+          <a class="dropdown-item" href="/jobs">Job Seeker</a>
           <div class="dropdown-divider"></div>
         </div>
       </li>
