--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-  <form method="POST" action="/">
+  <form method="post" class='form' role='form'>
     <div class="row mt-3">
       {{registration_form.email.label}}
     </div>
