Added Form to add pitch

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,8 @@
 <!-- Content block -->
 {% block content %}
 <div class="container-fluid mt-3">
+  <p>Do you want to write a pitch. Sign up <a href="auth/login">here</a></p>
+  <p>Already signed in? Write a pitch <a href="/new">here</a>.</p>
   <div class="row">
       {{macro.displayPitchList(pitches)}}
   </div>
