Added a bit of styling

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,6 +1,6 @@
 {% macro displayPitchList(pitch_list) %} {% for pitch in pitch_list %}
 <div class="col-xs-6 col-sm-6 col-md-6">
-  <div class="card">
+  <div class="card m-2">
     <div class="card-header">
       Category - {{pitch.category}}
     </div>
