--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -9,6 +9,7 @@
 
 {% block content %}
 <div class="container">
+  <p>Write a pitch</p>
   <form action method="post" class='form' role='form'>
     <div class="row mt-3">
       {{pitch_form.title.label}}
